# image-optimizer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  action.yml  deny.toml
.cargo/: audit.toml  config.toml
.cursor/plans/: roadmap_completion_plan_e99fa144.plan.md
.github/: dependabot.yml
.github/workflows/: action-smoke.yml  ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  report.rs  run.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: engine.rs  error.rs  format.rs  lib.rs  metadata.rs  options.rs  result.rs
crates/core/src/codecs/: gif.rs  jpeg.rs  mod.rs  png.rs  svg.rs  webp.rs
crates/core/tests/: engine.rs
docs/architecture/: README.md  roadmap.md
docs/architecture/adr/: 0001-frontend-agnostic-core.md  0002-github-releases-as-infrastructure.md  0003-explicit-skipped-semantics.md  0004-repeated-run-lossy-safety.md  0005-batch-memory-budget.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: optimize_bytes.rs
