[package]
name = "imageopt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform, all-in-one image optimizer (ImageOptim-style) — CLI"

[[bin]]
name = "imageopt"
path = "src/main.rs"

[dependencies]
imageopt-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }
anstream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
tempfile = { workspace = true }
